extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	$tree3Animation.play("tree3_animation")
	$tree3Animation2.play("tree3_animation")
	$tree3Animation3.play("tree3_animation")
	$tree3Animation4.play("tree3_animation")
	$tree3Animation5.play("tree3_animation")
	$tree3Animation6.play("tree3_animation")
	$tree3Animation7.play("tree3_animation")
	$tree3Animation8.play("tree3_animation")
	$tree3Animation9.play("tree3_animation")
	
	
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
